# cpp_tdd_2048_game

./: .ccls  .cquery  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Makefile  README.md  compile_flags.txt  run.sh  sonar-project.properties
ci/: build.sh  coverage.sh  get_project_name.sh  sonar.sh  test.sh
ci/custom/: Dockerfile  get_project_name.sh  internal_build.sh  internal_coverage.sh  internal_sonar.sh  internal_test.sh
ci/docker/: Dockerfile
src/: main.cpp
src/2048/adapters/: console_controller.cpp  console_controller.hpp  console_observer.cpp  console_observer.hpp  game_repository.cpp  game_repository.hpp  player_repository.cpp  player_repository.hpp
src/2048/application/: game_repository.cpp  game_repository.hpp  human_player.cpp  human_player.hpp  spawn_game.cpp  spawn_game.hpp
src/2048/application/ports/: start_game_usecase_port.hpp
src/2048/application/ports/in/: move_usecase_port.hpp  start_game_usecase_port.hpp
src/2048/application/usecases/: move_usecase.cpp  move_usecase.hpp  start_game_usecase.cpp  start_game_usecase.hpp
src/2048/domain/: board.cpp  board.hpp  direction.cpp  direction.hpp  game.cpp  game.hpp  number.cpp  number.hpp  observer.hpp  player.hpp  position.cpp  position.hpp  score.hpp
src/common/: move_only.hpp  random_generator.cpp  random_generator.hpp
src/test/: board.cpp  game.cpp  number.cpp  position.cpp  start_game_usecase.cpp  testutils.hpp
src/test/application/: start_game_usecase.cpp
src/test/domain/: board.cpp  game.cpp  number.cpp  position.cpp
src/test/domain/doubles/: board_testable.hpp  game_testable.hpp  number_testable.hpp  observer_spy.hpp  observer_stub.hpp  player_spy.hpp
src/test/doubles/: board_testable.hpp  game_testable.hpp  number_testable.hpp  observer_spy.hpp  observer_stub.hpp  player_spy.hpp
